Fix the remote cache issue for validation methods. Fix warnings